# gfx

./: CMakeLists.txt  README.md  gfx.code-workspace
shaders/: myShader.frag  myShader.vert
src/: Demangle.h  DynamicLighting.cpp  DynamicLighting.h  DynamicText.h  GetPipelineConfigForLines.cpp  LightupScene.cpp  MakeAxes.cpp  MyBuilder.cpp  MyBuilder.h  MyDrone.cpp  MyDrone.h  MyFrac.cpp  MyFrustum.cpp  MyFrustum.h  MyObject.cpp  MyObject.h  MyQuad.cpp  MyQuad.h  MyShip.cpp  MyShip.h  MyTransforms.h  drone.cpp  frac.cpp  pills.cpp  triangle-opengl.cpp  x.cpp
upack/include/glad/: glad.h
upack/src/: glad.c
